# matrixcpp

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
include/MatrixCpp/: Client.hpp  Responses.hpp  Room.hpp  Structs.hpp  Types.hpp  export.hpp
src/: Client.cpp  Olm.cpp  Olm.hpp  Room.cpp  Structs.cpp  Types.cpp  Utils.cpp  Utils.hpp
src/Events/: RoomEvents.cpp
src/Responses/: BaseResponse.cpp  Response.cpp  ResponseFuture.cpp  Responses.cpp
src/olm/: Olm.cpp  Olm.hpp  SessionStore.cpp  SessionStore.hpp
test/: CMakeLists.txt  ClientTest.cpp  ClientTest.cpp.in  LoginTest.cpp
